# project-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  dagster.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: analytics.yaml
data/2023-12-15/: clones.csv  referrers.csv  stars.csv  views.csv
data/2023-12-16/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2023-12-18/: pypi_downloads.csv  referrers.csv  views.csv
data/2023-12-19/: pypi_downloads.csv  stars.csv  views.csv
data/2023-12-20/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2023-12-21/: clones.csv  pypi_downloads.csv  views.csv
data/2023-12-22/: clones.csv  pypi_downloads.csv  stars.csv
data/2023-12-24/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2023-12-25/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2023-12-26/: clones.csv  pypi_downloads.csv  referrers.csv
data/2023-12-27/: clones.csv  views.csv
data/2023-12-28/: clones.csv  pypi_downloads.csv
data/2023-12-29/: referrers.csv  views.csv
data/2023-12-30/: referrers.csv
data/2023-12-31/: pypi_downloads.csv  referrers.csv  views.csv
data/2024-01-01/: pypi_downloads.csv
data/2024-01-02/: views.csv
data/2024-01-03/: clones.csv
data/2024-01-04/: pypi_downloads.csv  referrers.csv
data/2024-01-05/: pypi_downloads.csv
data/2024-01-06/: clones.csv  views.csv
data/2024-01-07/: referrers.csv  views.csv
data/2024-01-08/: pypi_downloads.csv
data/2024-01-09/: views.csv
data/2024-01-10/: clones.csv  referrers.csv
data/2024-01-12/: clones.csv  pypi_downloads.csv  referrers.csv
data/2024-01-14/: clones.csv
data/2024-01-15/: pypi_downloads.csv
data/2024-01-16/: clones.csv  pypi_downloads.csv  views.csv
data/2024-01-17/: clones.csv  referrers.csv
data/2024-01-18/: pypi_downloads.csv  referrers.csv  views.csv
data/2024-01-19/: clones.csv
data/2024-01-20/: clones.csv  views.csv
data/2024-01-21/: clones.csv  pypi_downloads.csv
data/2024-01-22/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2024-01-23/: clones.csv  pypi_downloads.csv
data/2024-01-24/: clones.csv  referrers.csv  views.csv
data/2024-01-25/: clones.csv  views.csv
data/2024-01-26/: views.csv
data/2024-01-29/: clones.csv  referrers.csv
data/2024-01-30/: clones.csv  pypi_downloads.csv  views.csv
data/2024-01-31/: clones.csv  pypi_downloads.csv  referrers.csv
data/2024-02-01/: clones.csv  pypi_downloads.csv  views.csv
data/2024-02-02/: referrers.csv
data/2024-02-03/: clones.csv
data/2024-02-04/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2024-02-05/: clones.csv  views.csv
data/2024-02-06/: pypi_downloads.csv
data/2024-02-07/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2024-02-08/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
data/2024-02-09/: clones.csv  views.csv
data/2024-02-10/: pypi_downloads.csv  referrers.csv
data/2024-02-11/: clones.csv  views.csv
data/2024-02-12/: pypi_downloads.csv  referrers.csv
data/2024-02-13/: views.csv
data/combined/: clones.csv  pypi_downloads.csv  referrers.csv  views.csv
hack/: lock-deps.sh
plots/2023-12-19/: clones.json  pypi_downloads.json  views.json
plots/2023-12-20/: pypi_downloads.json
plots/2023-12-21/: clones.json  views.json
plots/2023-12-22/: clones.json
plots/2023-12-23/: pypi_downloads.json
plots/2023-12-24/: pypi_downloads.json  views.json
plots/2023-12-25/: clones.json  stars.json
plots/2023-12-26/: pypi_downloads.json  views.json
plots/2023-12-27/: clones.json  pypi_downloads.json
plots/2023-12-28/: clones.json  pypi_downloads.json
plots/2023-12-29/: pypi_downloads.json
plots/2023-12-31/: clones.json  stars.json
plots/2024-01-01/: clones.json  views.json
plots/2024-01-02/: clones.json
plots/2024-01-03/: clones.json  pypi_downloads.json
plots/2024-01-04/: clones.json
plots/2024-01-05/: clones.json  pypi_downloads.json
plots/2024-01-06/: pypi_downloads.json  views.json
plots/2024-01-07/: pypi_downloads.json  views.json
plots/2024-01-08/: pypi_downloads.json  stars.json  views.json
plots/2024-01-09/: pypi_downloads.json  views.json
plots/2024-01-10/: clones.json
plots/2024-01-11/: clones.json  views.json
plots/2024-01-12/: clones.json  pypi_downloads.json  views.json
plots/2024-01-13/: clones.json
plots/2024-01-14/: views.json
plots/2024-01-15/: pypi_downloads.json  views.json
plots/2024-01-16/: clones.json  views.json
plots/2024-01-17/: clones.json  pypi_downloads.json
plots/2024-01-18/: views.json
plots/2024-01-19/: views.json
plots/2024-01-20/: clones.json  pypi_downloads.json
plots/2024-01-21/: clones.json  pypi_downloads.json  views.json
plots/2024-01-22/: pypi_downloads.json
plots/2024-01-23/: pypi_downloads.json
plots/2024-01-24/: clones.json  pypi_downloads.json
plots/2024-01-25/: clones.json
plots/2024-01-26/: clones.json  pypi_downloads.json  views.json
plots/2024-01-27/: views.json
plots/2024-01-28/: clones.json  pypi_downloads.json
plots/2024-01-30/: clones.json  pypi_downloads.json  views.json
plots/2024-01-31/: clones.json  views.json
plots/2024-02-01/: pypi_downloads.json  views.json
plots/2024-02-03/: clones.json  (+2 more)
tests/: test_util.py
(+3957 files in other folders)
